# Language-Detection-Model

./: Dockerfile  Language_detection.ipynb  README.md  pyproject.toml  requirements.txt
app/: main.py
app/model/: model.py
src/scripts/: Language_detection.ipynb
