[project]
name = "ml-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "alibi>=0.9.6",
    "alibi-detect>=0.12.0",
    "autokeras>=3.0.0",
    "fastapi>=0.121.1",
    "great-expectations>=1.10.0",
    "hyperopt>=0.2.7",
    "kagglehub>=0.3.13",
    "mlflow>=3.6.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pyspark>=4.0.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.2",
]
